# amazon-sagemaker-generativeai

./: .gitignore  .gitmodules  README.md
.github/: CODEOWNERS
0_model_customization_recipes/supervised_finetuning/sagemaker_code/evaluation_harness/: README.md  pyproject.toml  requirements.txt
0_model_customization_recipes/supervised_finetuning/sagemaker_code/evaluation_harness/src/evalharness/: cli.py  config.py  evaluate.py  test_data.py
3_distributed_training/diffusers/flux.1-dev/: .env-example  README.md  flux-fine-tune-sagemaker.ipynb  pyproject.toml  requirements.txt
3_distributed_training/diffusers/flux.1-dev/scripts/: script.sh
3_distributed_training/grpo-trl/: launch-training-job.ipynb  pyproject.toml
3_distributed_training/grpo-trl/scripts/: grpo.py
3_distributed_training/reinforcement-learning/grpo/veRL/: README.md  launch.py  multi-node  pyproject.toml
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/: README.md  model-trainer-verl-grpo.ipynb  requirements.txt
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/data/train/: dataset.parquet
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/docker/: Dockerfile  README.md  create-image.sh
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/scripts/: launcher.py  requirements.txt
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/scripts/verl/models/: weight_loader_registry.py
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/scripts/verl/trainer/: main_generation.py  main_ppo.py
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/scripts/verl/utils/: fs.py  hdfs_io.py  import_utils.py  model.py  torch_dtypes.py  ulysses.py
3_distributed_training/reinforcement-learning/grpo/veRL/multi-node/scripts/verl/workers/: fsdp_workers.py  megatron_workers.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/examples/split_placement/config/: ppo_trainer_split.yaml
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/models/mcore/: saver.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/models/transformers/: llama.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/single_controller/ray/: base.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/trainer/config/: sft_trainer.yaml
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/utils/: distributed.py  import_utils.py  ray_utils.py  tracking.py  ulysses.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/utils/checkpoint/: megatron_checkpoint_manager.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/utils/reward_score/: __init__.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/workers/actor/: dp_actor.py
3_distributed_training/reinforcement-learning/grpo/veRL/scripts/verl/workers/critic/: dp_critic.py
3_distributed_training/reinforcement-learning/grpo/veRL/single-node/: pyproject.toml
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/: launch_training.sh  pyproject.toml  requirements.txt  train.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/: __init__.py  imports.py  mock_vllm.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/envs/: __init__.py  code_env.py  doublecheck_env.py  environment.py  math_env.py  multiturn_env.py  simple_env.py  tool_env.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/examples/: __init__.py  gsm8k_calculator.py  gsm8k_code.py  gsm8k_doublecheck.py  gsm8k_peft.py  gsm8k_simple.py  math_code.py  math_doublecheck.py  math_simple.py  openbookqa_search.py  triviaqa_search.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/parsers/: __init__.py  xml_parser.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/prompts/: __init__.py  few_shots.py  system_prompts.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/rubrics/: __init__.py  code_rubric.py  math_rubric.py  rubric.py  tool_rubric.py  triviaqa_rubric.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/tools/: __init__.py  calculator.py  commonsense_tools.py  local_wiki_search.py  search.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/trainers/: __init__.py  grpo_env_trainer.py  mt_grpo_env_trainer.py  mt_grpo_trainer.py
3_distributed_training/reinforcement-learning/multi-turn-grpo-rewards/scripts/verifiers/utils/: __init__.py  config_utils.py  data_utils.py  logging_utils.py  model_utils.py
3_distributed_training/unsloth-on-sagemaker/: README.md  gemma3-4b-it.ipynb  pyproject.toml
3_distributed_training/unsloth-on-sagemaker/scripts/: requirements.txt  unsloth_train.py  unsloth_train_wandb.py
8_rl_cookbook/: README.md  (+5 more)
8_rl_cookbook/sama_cli/sama-llama32-data-prep-mcp-server/: DOLLY_PREP_SUMMARY.md  README.md  pyproject.toml  q-chat-config-example.json
8_rl_cookbook/sama_cli/sama-llama32-data-prep-mcp-server/sama_data_prep_mcp_server/: __init__.py  server.py  server.py.backup
8_rl_cookbook/sama_cli/sama-llama32-deployment-mcp-server/: DEPLOYMENT_POLLING_UPDATE.md  Dockerfile  QUICKSTART.md  README.md  check_endpoints.py  deploy_llama.py  http_wrapper.py  pyproject.toml  standalone_server.py  test_deployment.py  test_deployment_with_polling.py  test_polling_logic.py
8_rl_cookbook/sama_cli/sama-llama32-deployment-mcp-server/.amazonq/: .mcp.json.swp  mcp.json
8_rl_cookbook/sama_cli/sama-llama32-deployment-mcp-server/sama_deployment_mcp_server/: __init__.py  server.py  server.py.backup
8_rl_cookbook/sama_cli/sama-llama32-finetuning-mcp-server/: README.md  pyproject.toml
8_rl_cookbook/sama_cli/sama-llama32-finetuning-mcp-server/sama_finetuning_mcp_server/: __init__.py  server.py  server.py.backup
(+1018 files in other folders)
