[project]
name = "flux-fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "boto3>=1.40.6",
    "deepspeed>=0.17.4",
    "gpustat>=1.1.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "peft>=0.17.0",
    "prodigyopt>=1.1.2",
    "sagemaker>=2.250.0",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
    "triton>=3.4.0",
    "wandb>=0.21.1",
]
