[project]
name = "sama-data-prep-mcp-server"
version = "0.1.0"
description = "SAMA Data Preparation MCP Server - Dataset preparation for SAMA agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.9.2",
    "pydantic>=2.10.6",
    "boto3>=1.37.27",
    "sagemaker>=2.200.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.25.0"
]

[project.scripts]
"sama-data-prep-mcp-server" = "sama_data_prep_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sama_data_prep_mcp_server"]
