[project]
name = "sama-deployment-mcp-server"
version = "0.1.0"
description = "SAMA Deployment MCP Server - SageMaker model deployment for SAMA agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.9.2",
    "pydantic>=2.10.6",
    "boto3>=1.37.27",
    "sagemaker>=2.200.0",
    "mcp[cli]>=1.6.0"
]

[project.scripts]
"sama-deployment-mcp-server" = "sama_deployment_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sama_deployment_mcp_server"]
