[project]
name = "verl-on-sagemaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "boto3>=1.38.19",
    "codetiming>=1.4.0",
    "datasets>=2.2.1",
    "dill>=0.4.0",
    "fastapi>=0.115.12",
    "gpustat>=1.1.1",
    "graphene>=3.4.3",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.2",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "liger-kernel>=0.5.9",
    "mathruler>=0.1.0",
    "numpy<2.0.0",
    "nvitop>=1.5.0",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "pre-commit>=4.2.0",
    "py-spy>=0.4.0",
    "pyarrow>=15.0.0",
    "pybind11>=2.13.6",
    "pylatexenc>=2.10",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "qwen-vl-utils>=0.0.11",
    "ray[default]>=2.46.0",
    "ruff>=0.11.10",
    "sagemaker>=2.244.2",
    "setuptools>=80.7.1",
    "tensordict==0.6.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchdata>=0.11.0",
    "torchvision==0.21.0",
    "transformers[hf-xet]>=4.51.0",
    "uvicorn>=0.34.2",
    "verl>=0.3.0.post1",
    "vllm==0.8.3",
    "wandb>=0.19.11",
]
